--- a/teamEventsList.html
+++ b/teamEventsList.html
@@ -12,15 +12,17 @@
     <link rel="stylesheet" href="css/loadmore.css"/>
     <!--页面小图标-->
     <link rel="shortcut icon" type="image/x-icon" href="images/logo.ico">
+    <!--接口地址-->
+    <script src="lib/url.js"></script>
     <!--公用-->
     <script src="lib/common.js"></script>
     <script src="lib/zepto.min.js"></script>
     <!--加载更多js-->
     <script src="lib/loadmore.js"></script>
     <title>｛团队名称｝团队的活动经历</title>
-
 </head>
 <body>
+    <!--<h3>团队累计服务时长 <span></span></h3>-->
      <section>
          <ul>
              <!--<li>-->
@@ -35,7 +37,7 @@
              <!--</li>-->
          </ul>
          <!--加载更多按钮-->
-         <div class="js-load-more">加载更多</div>
+         <div class="js-load-more">上拉加载更多</div>
      </section>
 
      <!-- 站长统计 start-->
