--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
     <script src="layer/layer.js"></script>
     <!--公用-->
     <script src="lib/common.js"></script>
+    <!--接口地址-->
+    <script src="lib/url.js"></script>
     <!--进度条js-->
     <script src="lib/pace.js"></script>
     <!--微信js-->
     <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script src="lib/weixinshare.js"></script>
+    <!--app下载-->
+    <script src="lib/appdownload.js"></script>
     <title>您被邀请加入｛团队名称｝团队</title>
 </head>
 <body>
